--- a/redirect.html
+++ b/redirect.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; url=https://mail.google.com">
+    <link rel="icon" href="https://ssl.gstatic.com/ui/v1/icons/mail/rfr/gmail.ico">
 </head>
 <body>
     <p>Redirecting to Gmail...</p>
